<?xml version="1.0" encoding="utf-8"?>
<!-- Keys must match CameraPrefs.KEY_*; SettingsActivity points the PreferenceManager
     at the same SharedPreferences file (CameraPrefs.FILE). -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/pref_cat_language">

        <ListPreference
            android:key="app_language"
            android:icon="@drawable/ic_language"
            android:title="@string/pref_language_title"
            android:entries="@array/language_labels"
            android:entryValues="@array/language_values"
            android:defaultValue=""
            app:useSimpleSummaryProvider="true"
            app:singleLineTitle="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_connection">

        <SwitchPreferenceCompat
            android:key="auto_connect"
            android:icon="@drawable/ic_bluetooth_searching"
            android:title="@string/pref_auto_connect_title"
            android:summary="@string/pref_auto_connect_summary"
            android:defaultValue="false"
            app:singleLineTitle="false" />

        <Preference
            android:key="battery_exemption"
            android:icon="@drawable/ic_battery"
            android:title="@string/pref_battery_exemption_title"
            android:summary="@string/pref_battery_exemption_summary"
            app:singleLineTitle="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_gps">

        <SwitchPreferenceCompat
            android:key="battery_saver"
            android:icon="@drawable/ic_battery_saver"
            android:title="@string/pref_battery_saver_title"
            android:summary="@string/pref_battery_saver_summary"
            android:defaultValue="false"
            app:singleLineTitle="false" />

        <ListPreference
            android:key="saver_interval_sec"
            android:icon="@drawable/ic_timer"
            android:title="@string/pref_saver_interval_title"
            android:entries="@array/saver_interval_labels"
            android:entryValues="@array/saver_interval_values"
            android:defaultValue="20"
            android:dependency="battery_saver"
            app:useSimpleSummaryProvider="true"
            app:singleLineTitle="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_recording">

        <SwitchPreferenceCompat
            android:key="record_track"
            android:icon="@drawable/ic_route"
            android:title="@string/pref_record_track_title"
            android:summary="@string/pref_record_track_summary"
            android:defaultValue="false"
            app:singleLineTitle="false" />

        <Preference
            android:key="share_tracks"
            android:icon="@drawable/ic_share"
            android:title="@string/pref_share_tracks_title"
            android:summary="@string/pref_share_tracks_summary"
            app:singleLineTitle="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_troubleshooting">

        <Preference
            android:key="export_diagnostics"
            android:icon="@drawable/ic_bug_report"
            android:title="@string/pref_export_diag_title"
            android:summary="@string/pref_export_diag_summary"
            app:singleLineTitle="false" />

        <Preference
            android:key="clear_diagnostics"
            android:icon="@drawable/ic_delete"
            android:title="@string/pref_clear_diag_title"
            app:singleLineTitle="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_info">

        <Preference
            android:key="version"
            android:icon="@drawable/ic_update"
            android:title="@string/pref_version_title"
            app:singleLineTitle="false" />

        <Preference
            android:key="github"
            android:icon="@drawable/ic_code"
            android:title="@string/pref_github_title"
            android:summary="github.com/Asdoos/SonyGpsApp">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/Asdoos/SonyGpsApp" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
